EVA-120 Feat: Se crea la vista para guardar las novedades Adicional, se corrige el mensaje del placeholder de descripcion.

--- a/TalentoHumano/templates/TalentoHumano/_elements/_modal_agregar_novedad.html
+++ b/TalentoHumano/templates/TalentoHumano/_elements/_modal_agregar_novedad.html
@@ -22,7 +22,7 @@
                         {% input_date_tag 'fecha_novedad' 'Fecha de novedad' placeholder="Seleccione una fecha" required="" modal=True autocomplete="off" mensaje_validacion='Por favor seleccione una fecha.' %}
                     </div>
                     <div class="m-b-10">
-                        {% input_textarea_tag 'descripcion' 'Descripción' placeholder="Ingrese la descripción de na novedad" required="" modal=True maxlength="100" mensaje_validacion='Por favor describa la novedad' %}
+                        {% input_textarea_tag 'descripcion' 'Descripción' placeholder="Ingrese la descripción de la novedad" required="" modal=True maxlength="100" mensaje_validacion='Por favor describa la novedad' %}
                     </div>
                 </div>
                 <div class="form-row">
