--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -28,6 +28,9 @@
                         {% if perms.TalentoHumano.add_novedacolaborador %}
                         <a class="dropdown-item" href="javascript: agregarNovedad({{ colaborador.usuario_id }})">Agregar Novedad</a>
                         {% endif %}
+                        {% if perms.TalentoHumano.add_empresacolaborador %}
+                        <a class="dropdown-item" href="javascript: seleccionarEmpresas({{ colaborador.usuario_id }})">Empresas</a>
+                        {% endif %}
                         {% if perms.TalentoHumano.delete_colaborador %}
                         <a class="dropdown-item" href="javascript:void(0);" id="eliminar_{{ id_tarjeta }}"   onclick="fConfirmarEliminar({{ id_tarjeta }})">Eliminar</a>
                         {% endif %}
