EVA-116 Feat: Se configuran los estilos de los resultados del consolidado.

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -133,3 +133,11 @@ position: relative;
 .t-a-e {
     text-align: end;
 }
+
+.min-w-200{
+    min-width: 200px;
+}
+
+.table-td-a-t-e td{
+    text-align: end;
+}
