EVA-121 Feat: Se edita el input general, para permitir la propiedad de label_id

--- a/EVA/templates/EVA/_general_tags/_input_general_tag.html
+++ b/EVA/templates/EVA/_general_tags/_input_general_tag.html
@@ -3,7 +3,7 @@
         <div class="custom-control custom-checkbox">
 {% else %}
     {% if texto_label %}
-        <label for="{{ nombre }}_id">{{ texto_label}}</label>
+        <label for="{{ nombre }}_id" {% if label_id %}id="label_{{ nombre }}_id" {% endif %}>{{ texto_label}}</label>
     {% endif %}
 {% endif %}
 
