EVA-121 Feat: Se agrega el llamado del js control vigencias desde el crear-editar contrato.

--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -311,5 +311,6 @@
     <script src="{% static 'Proyectos/js/Contratos/FormularioContrato/formasDePago.js' %}"></script>
     <script src="{% static 'Proyectos/js/Contratos/FormularioContrato/supervisorInterventor.js' %}"></script>
     <script src="{% static 'Proyectos/js/Contratos/FormularioContrato/controlGarantias.js' %}"></script>
+    <script src="{% static 'Proyectos/js/Contratos/FormularioContrato/controlVigencia.js' %}"></script>
     <script src="{% static 'Proyectos/js/Contratos/configuracionSelectMultiple.js' %}"></script>
 {% endblock scripts %}
