--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -25,7 +25,7 @@
                         {% if perms.auth.change_permission and request.user.id != colaborador.usuario_id and not colaborador.usuario.is_superuser %}
                         <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-permisos' colaborador.usuario_id 0 %}">Gestionar Permisos</a>
                         {% endif %}
-                        {% if perms.TalentoHumano.add_novedacolaborador %}
+                        {% if perms.TalentoHumano.add_novedadcolaborador %}
                         <a class="dropdown-item" href="javascript: agregarNovedad({{ colaborador.usuario_id }})">Agregar Novedad</a>
                         {% endif %}
                         {% if perms.TalentoHumano.add_colaboradorempresa %}
